# pod5-file-format

./: .clang-format  .codespellrc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  DEV.md  LICENSE.md  README.md  conanfile.py  conanfile.txt  pod5_make_version.py  pyproject.toml  pytest.ini
c++/: CMakeLists.txt
c++/examples/: CMakeLists.txt  README.md  find_all_read_data.cpp  find_all_read_ids.cpp  find_specific_read_ids.cpp  find_specific_read_ids_with_signal.cpp
c++/mkr_format/: c_api.cpp  c_api.h  errors.cpp  errors.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  read_table_reader.cpp  read_table_reader.h  read_table_schema.cpp  read_table_schema.h  read_table_utils.cpp  read_table_utils.h  read_table_writer.cpp  read_table_writer.h  read_table_writer_utils.cpp  read_table_writer_utils.h  result.h  schema_metadata.cpp  schema_metadata.h  schema_utils.h  signal_compression.cpp  signal_compression.h  signal_table_reader.cpp  signal_table_reader.h  signal_table_schema.cpp  signal_table_schema.h  signal_table_utils.h  signal_table_writer.cpp  signal_table_writer.h  table_reader.cpp  table_reader.h  types.cpp  types.h  version.h.in
c++/mkr_format/flatbuffers/: footer.fbs
c++/mkr_format/internal/: combined_file_utils.h  schema_utils.h
c++/mkr_format/svb16/: common.hpp  decode.hpp  decode_scalar.hpp  decode_x64.hpp  encode.hpp  encode_scalar.hpp  encode_x64.hpp  intrinsics.hpp  shuffle_tables.hpp  simd_detect_x64.hpp  streamvbytedelta_encode_16.c  streamvbytedelta_x64_decode_16.c
c++/mkr_format_pybind/: CMakeLists.txt  bindings.cpp
c++/pod5_format/: async_signal_loader.cpp  async_signal_loader.h  c_api.cpp  c_api.h  dictionary_writer.h  errors.cpp  errors.h  expandable_buffer.h  file_output_stream.h  file_reader.cpp  file_reader.h  file_recovery.h  file_updater.cpp  file_updater.h  file_writer.cpp  file_writer.h  io_manager.cpp  io_manager.h  memory_pool.cpp  memory_pool.h  read_table_reader.cpp  read_table_reader.h  read_table_schema.cpp  read_table_schema.h  read_table_utils.cpp  read_table_utils.h  read_table_writer.cpp  read_table_writer.h  read_table_writer_utils.cpp  read_table_writer_utils.h  result.h  run_info_table_reader.cpp  run_info_table_reader.h  run_info_table_schema.cpp  run_info_table_schema.h  run_info_table_writer.cpp  run_info_table_writer.h  schema_field_builder.h  schema_metadata.cpp  schema_metadata.h  (+21 more)
c++/pod5_format/flatbuffers/: footer.fbs
c++/pod5_format/internal/: async_output_stream.h  combined_file_utils.h  linux_output_stream.h  schema_utils.h
c++/pod5_format/migration/: migration.cpp  migration.h  migration_utils.h  v0_to_v1.cpp  v1_to_v2.cpp  v2_to_v3.cpp  v3_to_v4.cpp
c++/pod5_format/svb16/: common.hpp  decode.hpp  decode_scalar.hpp  decode_x64.hpp  encode.hpp  encode_scalar.hpp  encode_x64.hpp  generate_shuffle_tables.py  intrinsics.hpp  shuffle_tables.hpp  simd_detect_x64.hpp  streamvbytedelta_decode_16.c  streamvbytedelta_encode_16.c  streamvbytedelta_x64_decode_16.c  streamvbytedelta_x64_encode_16.c  svb16.h
c++/pod5_format_pybind/: CMakeLists.txt  _version.py.in  api.h  bindings.cpp  build_wheel.cmake  repacker.h  subset.cpp  subset.h  utils.h
c++/pod5_format_pybind/repack/: repack_functions.h  repack_output.cpp  repack_output.h  repack_states.h  repack_utils.h  repacker.cpp  repacker.h
c++/test/: CMakeLists.txt  TemporaryDirectory.h  c_api_build_test.c  c_api_null_input.cpp  c_api_test_utils.h  c_api_tests.cpp  file_reader_writer_tests.cpp  mkr_test.cpp  output_stream_tests.cpp  read_table_tests.cpp  read_table_writer_utils_tests.cpp  run_info_table_tests.cpp  schema_tests.cpp  signal_compression_tests.cpp  signal_table_tests.cpp  svb16_basic_tests.cpp  svb16_scalar_tests.cpp  svb16_x64_tests.cpp  test_utils.h  thread_pool_tests.cpp  utils.h  uuid_tests.cpp
fuzz/: .gitattributes  CMakeLists.txt  fuzz_compress.cpp  fuzz_file.cpp  runner.cpp
python/: .gitignore  CMakeLists.txt  Makefile  README.md  build_tools_wheel.cmake  build_wheel.cmake  build_wheels.cmake  pyproject.toml
python/lib_pod5/: Makefile  README.md  pyproject.toml  setup.py
python/lib_pod5/src/lib_pod5/: __init__.py  (+1 more)
python/lib_pod5_format/: pyproject.toml  setup.py
python/mkr_format/: __init__.py  _version.py  _version.py.in  api_utils.py  c_api.py  pyarrow_reader.py  pyproject.toml  reader.py  reader_c_api.py  reader_pyarrow.py  reader_utils.py  setup.py  signal_tools.py  utils.py  writer.py
python/mkr_format/examples/: find_all_reads.py  find_specific_reads.py
python/mkr_format/mkr_format/: __init__.py  _version.py.in  api_utils.py  reader.py  reader_pyarrow.py  reader_utils.py  signal_tools.py  writer.py
python/mkr_format/tests/: test_api.py
python/mkr_format/tools/: mkr-convert-fast5.py  mkr-inspect.py  mkr_convert_fast5.py  mkr_inspect.py
python/mkr_format_tools/: pyproject.toml  setup.py
python/mkr_format_tools/mkr_format_tools/: mkr_convert_fast5.py  mkr_inspect.py
python/pod5/: Makefile  README.md  pyproject.toml  setup.py
python/pod5/examples/: find_all_reads.py  find_specific_reads.py
python/pod5/test_utils/: check_pod5_files_equal.py
python/pod5_format/: pyproject.toml  setup.py
python/pod5_format/pod5_format/: __init__.py  _version.py.in  api_utils.py  handles.py  pod5_format_pybind.pyi  pod5_types.py  reader.py  reader_pyarrow.py  reader_utils.py  repack.py  signal_tools.py  types.py  utils.py  writer.py
python/pod5_format/tests/: conftest.py  test_api.py  test_reader.py  test_signal_tools.py  test_writer.py
python/pod5_format_tools/: pyproject.toml  setup.py
python/pod5_format_tools/pod5_format_tools/: __init__.py  pod5_convert_fast5.py  pod5_convert_from_fast5.py  pod5_convert_to_fast5.py  pod5_demux.py  pod5_inspect.py  pod5_merge.py  pod5_repack.py  pod5_unconvert_fast5.py  pod5_update.py  utils.py
python/pod5_format_tools/tests/: test_convert_from_fast5.py  test_demux.py  test_merge.py
python/tests/: test_api.py
python/tests/tools/: check_mkr_files_equal.py
(+200 files in other folders)
