[build-system]
requires = ["flit_core >=3.2,<4", "wheel"]
build-backend = "flit_core.buildapi"


[project]
name = "mkr_format"
authors = []
readme = "README.md"
requires-python = "~= 3.7"
dynamic = ["version", "description"]

dependencies = [
    "numpy"
]

[tool.black]
target-version = ["py37"]

[tool.coverage.run]
branch = true
source = ["run_report_generation_template"]

[tool.isort]
profile = "black"
