[build-system]
requires = ["flit_core >=3.2,<4", "wheel"]
build-backend = "flit_core.buildapi"


[project]
name = "mkr_format"
authors = []
readme = "README.md"
requires-python = "~= 3.7"
dynamic = ["version", "description"]

dependencies = [
    "iso8601",
    "h5py",
    "more_itertools",
    "numpy",
    "pyarrow",
    "pytz",
]

[project.optional-dependencies]
test = [
  "pytest ~= 6.2",
  "pytest-cov ~= 3.0",
]

[project.scripts]
mkr-convert-fast5 = "mkr_format.tools.mkr_convert_fast5:main"
mkr-inspect = "mkr_format.tools.mkr_inspect:main"

[tool.black]
target-version = ["py37"]

[tool.coverage.run]
branch = true
source = ["run_report_generation_template"]

[tool.isort]
profile = "black"
